updates permissions and roles
