# cmd/api/docs/swagger.json
@@ -3090,7 +3090,7 @@
             }
         },
         "/permission/get_all": {
-            "post": {
+            "get": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -3104,14 +3104,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Member"
+                    "Permission"
                 ],
                 "summary": "Permissions GetAll",
                 "responses": {
                     "200": {
                         "description": "Members obtenidos con éxito",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.PermissionResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -3142,7 +3157,7 @@
             }
         },
         "/permission/get_to_me": {
-            "post": {
+            "get": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -3156,14 +3171,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Member"
+                    "Permission"
                 ],
                 "summary": "Permissions GetAlltoME",
                 "responses": {
                     "200": {
                         "description": "Members obtenidos con éxito",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.PermissionResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -4150,7 +4180,22 @@
                     "200": {
                         "description": "Roles retrieved successfully",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.RoleResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -6185,7 +6230,6 @@
                     "type": "string"
                 },
                 "movement_type_id": {
-                    "description": "SupplierID     string  `json:\"supplier_id\"` sacar",
                     "type": "string"
                 },
                 "purchase_order_id": {
@@ -6568,6 +6612,23 @@
                 }
             }
         },
+        "models.PermissionResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "details": {
+                    "type": "string"
+                },
+                "group": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Product": {
             "type": "object",
             "properties": {
@@ -6881,11 +6942,18 @@
         "models.RoleCreate": {
             "type": "object",
             "required": [
-                "name"
+                "name",
+                "permissions_id"
             ],
             "properties": {
                 "name": {
                     "type": "string"
+                },
+                "permissions_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -6897,6 +6965,23 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "models.RoleResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "permissions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.PermissionResponse"
+                    }
                 }
             }
         },
