# pkg/models/permission.go
@@ -7,3 +7,16 @@ type Permission struct {
 	Group string `gorm:"not null" json:"group"`
 	Roles []Role `gorm:"many2many:role_permissions;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;" json:"roles"`
 }
+
+type PermissionResponse struct {
+	ID      string `json:"id"`
+	Code    string `json:"code"`
+	Details string `json:"details"`
+	Group   string `json:"group"`
+}
+
+type PermissionDTO struct {
+	ID      string `json:"id"`
+	Code    string `json:"code"`
+	Details string `json:"details"`
+}
