# pkg/models/role.go
@@ -14,6 +14,7 @@ type Role struct {
 
 type RoleCreate struct {
 	Name string `json:"name" validate:"required"`
+	PermissionsID []string `json:"permissions_id" validate:"required,dive,uuid"`
 }
 
 func (r *RoleCreate) Validate() error {
@@ -31,7 +32,43 @@ func (r *RoleCreate) Validate() error {
 	return fmt.Errorf("campo %s es invalido, revisar: (%s) (%s)", field, tag, param)
 }
 
+type RoleUpdate struct {
+	ID   string `json:"id" validate:"required,uuid"`
+	Name string `json:"name" validate:"required"`
+	PermissionsID []string `json:"permissions_id" validate:"required,dive,uuid"`
+}
+
+func (r *RoleUpdate) Validate() error {
+	validate := validator.New()
+	err := validate.Struct(r)
+	if err == nil {
+		return nil
+	}
+
+	validationErr := err.(validator.ValidationErrors)[0]
+	field := validationErr.Field()
+	tag := validationErr.Tag()
+	param := validationErr.Param()
+
+	return fmt.Errorf("campo %s es invalido, revisar: (%s) (%s)", field, tag, param)
+}
+
 type RoleDTO struct {
 	ID   string `json:"id"`
 	Name string `json:"name"`
+}
+
+type RoleResponse struct {
+	ID   string `json:"id"`
+	Name string `json:"name"`
+	Permissions []PermissionResponse `json:"permissions"`
+}
+
+type RolePermissionRow struct {
+    RoleID      string
+    RoleName    string
+    PermID      string
+    PermCode    string
+    PermDetails string
+    PermGroup   string
 }
